# wavepde

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/wavepde/: Plot.py  Wave.py  main.py  plot.py  solver.py  wave.py
