[tool.poetry]
name = "wavepde"
version = "0.1.0"
description = ""
authors = ["salastro <salah2112004@gmail.com>"]
readme = "README.md"
packages = [{include = "wavepde", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
